--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "jvmt",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "\"# cli-assistant\"",
   "main": "index.js",
   "type": "commonjs",
+  "bin": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
