--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": ["cli","assistant","jarvis","utility"],
   "author": "snoopycoder",
   "license": "ISC",
   "dependencies": {
