--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "jvmt",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "\"# cli-assistant\"",
   "main": "index.js",
   "bin": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["cli","assistant","jarvis","utility"],
+  "keywords": [
+    "cli",
+    "assistant",
+    "jarvis",
+    "utility"
+  ],
   "author": "snoopycoder",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "decompress": "^4.2.1"
+    "decompress": "^4.2.1",
+    "fs": "^0.0.1-security"
   }
 }
