--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jvmt",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "\"# cli-assistant\"",
   "main": "index.js",
   "bin": "./index.js",
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "decompress": "^4.2.1",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "play-sound": "^1.1.5"
   }
 }
